reign_derive/tests/ui/compile_fail/options_trailing_ident.rs
use reign::prelude::*;

fn test() {
    render!(pages::home, status);
}

fn main() {}
