reign_derive/tests/ui/compile_fail/options_trailing_ident.stderr
error: expected `=`
 --> $DIR/options_trailing_ident.rs:4:5
  |
4 |     render!(pages::home, status);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `render` (in Nightly builds, run with -Z macro-backtrace for more info)
